welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: Invalid literal number
      nb+=1serpent()      
          ^Diagonal:11: error: Invalid literal number
      nb+=1serpent()      
          ^Diagonal:11: error: ';' expected but something found.
      nb+=1serpent()      
          ^Diagonal:18: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:21: error: expected start of definition
	override def forward()  {
                 ^Diagonal:24: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:27: error: expected start of definition
	override def backward() {
                 ^Diagonal:30: error: Unmatched closing brace '}' ignored here
}
^